main/default/objects/Product_Selection__mdt/Product_Selection__mdt.object-meta.xml
<CustomObject>
    <label>Product Selection</label>
    <pluralLabel>Product Selections</pluralLabel>
</CustomObject>