main/default/objects/Product_Selection__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>