main/default/objects/Product_Selection__mdt/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>