main/default/objects/Product_Selection__mdt/fields/Quote_Process_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Process_Record_Type__c</fullName>
    <label>Quote Process Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>